# archive-to-parquet

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  README.md  mise.toml  pyproject.toml
.github/: run-basic-python-tests  run-python-package-tests
.github/workflows/: python.yml  rust.yml  test.yml  try.yml
.mise-tasks/: build-python  test-python  test-python-package-ci
benches/: bench_extraction.rs
crates/anyreader/: Cargo.toml  README.md
crates/anyreader-walker/: Cargo.toml  README.md
crates/anyreader-walker/src/: entry.rs  lib.rs  tests.rs  utils.rs
crates/anyreader-walker/src/walkers/: tarfile.rs  zipfile.rs
crates/anyreader/benches/: bench_detection.rs
crates/anyreader/src/: compression.rs  format.rs  lib.rs  test.rs
crates/archive-to-parquet/: Cargo.toml
crates/archive-to-parquet/src/: channel.rs  lib.rs  main.rs  progress.rs  visitor.rs
crates/archive-to-parquet/src/converter/: base.rs  mod.rs  progress.rs
crates/extract-strings/: Cargo.toml
crates/extract-strings/src/: ascii.rs
crates/python/: Cargo.toml
crates/python/src/: config.rs  lib.rs  wrapper.rs
crates/python/tests/: test_basic.py
examples/: extract.py
src/: batch.rs  channel.rs  items.rs  lib.rs  main.rs  output.rs  progress.rs  python.rs  sink.rs  tests.rs  visitor.rs
src/anyreader/: compression.rs  format.rs  mod.rs  test.rs
src/anyreader_walker/: entry.rs  mod.rs  stack.rs  tests.rs  utils.rs
src/anyreader_walker/walkers/: file.rs  mod.rs  tarfile.rs  zipfile.rs
src/converter/: base.rs  mod.rs  progress.rs
src/extraction/: extractor.rs  input.rs  items.rs  mod.rs  output.rs
src/formats/: common.rs  mod.rs  tar.rs  zip.rs
