[workspace]
resolver = "2"
members = ["crates/*"]
package.license = "MIT"
package.edition = "2024"
package.repository = "https://github.com/orf/archive-to-parquet"

[package]
name = "archive-to-parquet"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Recursively convert archives to parquet files"

default-run = "archive-to-parquet"

[dependencies]
extract-strings = { path = "crates/extract-strings", version = "0.4.1" }
anyreader-walker = { path = "crates/anyreader-walker", version = "0.2.1" }
arrow = { version = "57.2.0", default-features = false }
parquet = "57.2.0"
clap = { version = "4.5.23", features = ["derive"] }
ring = "0.17.8"
byte-unit = "5.1.6"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rayon = "1.10.0"
simdutf8 = "0.1.5"
crossbeam-channel = "0.5.14"
derive-new = "0.7.0"
indicatif = "0.18.3"
strum = { version = "0.27.2", features = ["derive"] }
anyhow = "1.0.95"
rlimit = "0.10.2"
tracing-appender = "0.2.3"
reqwest = { version = "0.13.1", features = ["blocking", "http2", "stream"] }

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.flamegraph]
inherits = "release"
debug = true
