[workspace]
resolver = "2"
members = ["crates/extract-strings"]
package.license = "MIT"
package.edition = "2024"
package.repository = "https://github.com/orf/archive-to-parquet"

[package]
name = "archive-to-parquet"
version = "0.9.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Recursively convert archives to parquet files"

default-run = "archive-to-parquet"

[dependencies]
extract-strings = { path = "crates/extract-strings", version = "0.4.1" }

# Dependencies from inlined anyreader crate
peekable = { version = "0.4.1", features = ["smallvec"] }
zstd = { version = "0.13.2", default-features = false, features = ["arrays"] }
infer = "0.19.0"
flate2 = { version = "1.1.8", features = ["zlib-ng"], default-features = false }
liblzma = "0.4.5"
bzip2 = "0.6.1"

# Dependencies from inlined anyreader-walker crate
tar = "0.4.44"
zip = "7.2.0"
bytes = "1.11.0"
smallvec = "1.13.2"

arrow = { version = "57.2.0", default-features = false }
parquet = "57.2.0"
clap = { version = "4.5.56", features = ["derive"] }
ring = "0.17.8"
byte-unit = "5.1.6"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rayon = "1.10.0"
simdutf8 = "0.1.5"
crossbeam-channel = "0.5.14"
derive-new = "0.7.0"
indicatif = "0.18.3"
strum = { version = "0.27.2", features = ["derive"] }
anyhow = "1.0.95"
rlimit = "0.10.2"
tracing-appender = "0.2.3"
reqwest = { version = "0.13.1", features = ["blocking", "http2", "stream"] }

[dev-dependencies]
hex = "0.4.3"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.flamegraph]
inherits = "release"
debug = true
