[package]
name = "anyreader-walker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Recursively walk archives and compressed files"

[dependencies]
anyreader = { path = "../anyreader", version = "0.1.0" }
tar = "0.4.43"
zip = "2.2.2"
bytes = "1.9.0"
smallvec = "1.13.2"

[dev-dependencies]
anyreader = { path = "../anyreader", features = ["test-utils"] }
