[package]
name = "anyreader-walker"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A library for reading streams of compressed and uncompressed data without knowing the format in advance"

[dependencies]
anyreader = { path = "../anyreader", version = "0.2.0" }
tar = "0.4.44"
zip = "2.2.3"
bytes = "1.10.1"
smallvec = "1.14.0"

[dev-dependencies]
anyreader = { path = "../anyreader", features = ["test-utils"] }
zstd = "0.13.3"
