[package]
name = "anyreader"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A library for reading compressed and uncompressed data without knowing the format in advance."

[dependencies]
peekable = { version = "0.3.0", features = ["smallvec"] }
zstd = { version = "0.13.3", default-features = false, features = ["arrays"] }
infer = "0.19.0"
flate2 = { version = "1.1.0", features = ["zlib-ng"], default-features = false }
liblzma = "0.3.6"
bzip2 = { version = "0.5.2" }
strum = { version = "0.27.1", features = ["derive"] }

tracing = "0.1.41"

tar = { version = "0.4.44", optional = true }
zip = { version = "2.2.3", optional = true }
hex = { version = "0.4.3", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
criterion = { version = "0.5", features = ["html_reports"] }
tar = "0.4.44"
zip = "2.2.3"

[features]
default = []
test-utils = ["dep:tar", "dep:zip", "dep:hex"]
bench = ["tracing/release_max_level_off"]

[[bench]]
name = "bench_detection"
harness = false
required-features = ["bench"]
