[package]
name = "py-archive-to-parquet"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "archive_to_parquet"
crate-type = ["cdylib"]

[dependencies]
byte-unit = "5.2.0"
derive-new = "0.7.0"
pyo3 = { version = "0.27.2", features = ["abi3-py310"] }
archive-to-parquet = {path = "../..", version = "0.8.0" }

tracing = { version = "0.1.44"}
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = []
#py-io = ["dep:pyo3-file"]
